# mutuo_backend

./: .coverage  .gitignore  pyproject.toml
mutuo/: __init__.py  exceptions.py  schemas.py  settings.py  utils.py
mutuo/app/: api.py  exception.py  exception_handler.py  logging.py  main.py  rate_limiter.py
mutuo/auth/: dependencies.py  routes.py  schemas.py  service.py  usecases.py  utils.py
mutuo/cache/: dependencies.py  protocols.py
mutuo/cache/redis/: __init__.py
mutuo/communications/: service.py  types.py
mutuo/communications/templates/: verify_email.html
mutuo/contracts/: mappers.py  models.py  routes.py  schemas.py  types.py  usecases.py
mutuo/contracts/sqlalchemy/: dependencies.py  mappers.py  models.py  repository.py
mutuo/database/: core.py  dependencies.py  models.py  service.py
mutuo/database/sqlalchemy/: management.py
mutuo/listings/: mappers.py  models.py  repository.py  routes.py  schemas.py  transformers.py  types.py  usecases.py
mutuo/persistence/: dependencies.py  protocols.py
mutuo/security/: dependencies.py  encryption.py  hashing.py  protocols.py  services.py  types.py
mutuo/users/: mappers.py  models.py  repository.py  routes.py  schemas.py  service.py  transformers.py  types.py  use_cases.py  usecases.py
mutuo/users/sqlalchemy/: mappers.py  (+3 more)
tests/: conftest.py
tests/auth/: conftest.py  test_create_session.py  test_is_owner_dependency.py  test_login.py
tests/contracts/: conftest.py
tests/listings/: conftest.py
tests/security/: test_encryption.py  test_hashing.py
tests/users/: conftest.py  test_create_use_case.py
(+43 files in other folders)
